--- a/html/style.css
+++ b/html/style.css
@@ -24,3 +24,7 @@ del {text-decoration: line-through; color: #777777;}
 .justright {text-align: right;}
 .justcenter {text-align: center;}
 .center {margin-left: auto; margin-right: auto;}
+a:focus, a:hover, a:active, a:visited {
+	outline: none;
+    text-decoration: none;
+}
