--- a/html/style.css
+++ b/html/style.css
@@ -43,6 +43,9 @@ blockquote {
     padding: 0.4em; 
     background-color: #FEF8C4;
 }
+code {
+    background-color: #FEF8C4;
+}
 th, td {border: 1px solid #ccc; padding: 0.3em;}
 th {background-color: #f0f0f0;}
 hr {border: none; border-top: 1px solid #ccc; width: 100%;}
