--- a/html/style.css
+++ b/html/style.css
@@ -9,7 +9,12 @@ body {
     margin: 0 auto;
     position: relative;
 }
-h1, h2, h3, h4, h5, h6 {font-family: Candara, Trebuchet MS, serif; margin-top: 1.5em; margin-bottom: 0.5em;}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Lato', sans-serif;
+    /*font-family: Candara, Trebuchet MS, serif; */
+    margin-top: 1.5em; 
+    margin-bottom: 0.5em;
+}
 h1 {font-size: 2.0em; color: #a77070;}
 h2 {font-size: 1.6em; color: #779977;}
 h3 {font-size: 1.3em; color: #555577;}
